2021-02-19  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx: Update to 1.19.

2021-02-18  Vincent Pelletier <plr.vincent@gmail.com>

	* test/features/202_setup_passphrase.feature: Fix.
	* test/rsa_keys.py: Fix escape.
	* tests/card_reader.py: Extend the timeout.
	Handle no card.
	* tests/rsa_keys.py: Fix escape.
	* tool/gnuk_token.py: Avoid hard-coding the endpoints.
	Longer timeout.

2021-02-18  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure [GNU_LINUX_EMULATION] (def_mhz): Define.
	(output_vendor_product_serial_strings): Output ARCH.

	* GNUK_USB_DEVICE_ID: Use "Gnuk Token" for emulation, too.

	* src/main.c [GNU_LINUX_EMULATION] (main): Add initialization of
	the .gnuk-flash-image file.
	(gnuk_sbrk): Rename from sbrk.

2020-09-10  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.16.

2020-09-09  NIIBE Yutaka  <gniibe@fsij.org>

	* src/modp256k1.c (modp256k1_add, modp256k1_sub): Use memcpy with
	dummy memory area.
	* src/modp256r1.c (modp256r1_add, modp256r1_sub)
	(modp256r1_reduce): Likewise.

2020-09-08  NIIBE Yutaka  <gniibe@fsij.org>

	* src/modp256k1.c (modp256k1_add, modp256k1_reduce): Avoid
	optimization to remove call of memmove.
	* src/modp256r1.c (modp256r1_add, modp256r1_sub)
	(modp256r1_reduce): Likewise.

2020-09-07  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (gpg_get_firmware_update_key): Use an array.

	* src/modp256k1.c (modp256k1_add, modp256k1_sub): Use memmove.
	* src/modp256r1.c (modp256r1_add, modp256r1_sub)
	(modp256r1_reduce): Likewise.

2020-09-04  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (GPG_DO_ALG_INFO): New.
	(do_fp_all, do_cafp_all, do_kgtime_all, do_openpgpcard_aid)
	(do_ds_count): Return nothing.
	(copy_do): Change the API for DO_PROC_READ.
	(do_alg_info): New for GPG_DO_ALG_INFO.
	(gpg_do_table): Add an entry for GPG_DO_ALG_INFO.

2020-09-03  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_internal_authenticate): Remove checking
	against EDDSA_HASH_LEN_MAX.
	(cmd_pso): Likewise.
